# kegerator

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.buildroot  Kegerator.cpp  Kegerator.hpp  LICENSE  README  README.md  main.cpp  package-lock.json  package.json  qt-static-build-notes.txt
gpio/: CMakeLists.txt  FakeGPIO.cpp  FakeGPIO.hpp  GPIO.cpp  GPIO.hpp  GPIOLinux.cpp  GPIOLinux.hpp  GPIOLinuxWatcher.cpp  GPIOLinuxWatcher.hpp  GPIOPin.cpp  GPIOPin.hpp  KegeratorGPIOTest.cpp
gpio/fake/: CMakeLists.txt  FakeGPIO.cpp  FakeGPIO.hpp
gpio/libgpiod/: CMakeLists.txt  LibGPIOd.cpp  LibGPIOd.hpp  LibGPIOdWatcher.cpp  LibGPIOdWatcher.hpp
gpio/linux/: CMakeLists.txt  GPIOLinux.cpp  GPIOLinux.hpp  GPIOLinuxWatcher.hpp  KegeratorGPIOTest.cpp
gpio/mac_stubs/: gpiod.h
lib/: FlowLayout.cpp  FlowLayout.hpp
player/: AudioPlayer.cpp  AudioPlayer.hpp  AudioTrack.cpp  AudioTrack.hpp  CMakeLists.txt  Player.cpp  Player.hpp  Track.cpp  Track.hpp
qemu/: run-pi3.sh  run-virt-alpine.sh  run-virt-ubuntu.sh
qemu/alpine/: build.sh  run-hvf.sh  run.sh
qemu/alpine-netboot/: build.sh  run-hvf.sh  run.sh
qemu/pi3/: build.sh  run-pi3.sh
src/: config.js  controls.js  main.js  player.js
ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  Player.cpp  Player.hpp  Resources.hpp  RoundButton.cpp  Toast.cpp  Toast.hpp
ui/buttons/: RoundButton.cpp  RoundButton.hpp
ui/color/: CMakeLists.txt  ColorPicker.cpp  ColorPicker.hpp
ui/screens/: ConfigurationScreen.cpp  ConfigurationScreen.hpp  KegeratorScreen.cpp  KegeratorScreen.hpp  SoundboardScreen.cpp  SoundboardScreen.hpp
